# evdi-sys

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  generate_bindings.sh
examples/: basic_usage.rs
src/: bindings.rs  lib.rs  wrapper_bindings.rs
src/c_wrapper/: wrapper.c  wrapper.h
