[package]
name = "evdi-sys"
version = "0.4.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"
license = "MIT"
description = "Low level bindings for evdi"
repository = "https://github.com/danielzfranklin/evdi-sys"
keywords = ["evdi", "displaylink", "ffi", "bindings", "linux"]
categories = ["os::linux-apis", "external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.82"

[build-dependencies]
cc = { version = "1.0.66", features = ["parallel"] }
pkg-config = "0.3.19"
